# agent-mailroom

./: .env.example  .gitignore  README.md  demo.py  demo_payments.py  demo_swarm.py  pyproject.toml  requirements.txt  sandbox_node.py
agent_mailroom/: __init__.py  auth.py  broker.py  channel.py  mailroom.py  registry.py  server.py
contracts/: AgentPaymentChannel.sol  AgentRegistry.sol
tests/: __init__.py  conftest.py  test_auth.py  test_channel.py  test_disputes.py  test_registry.py  test_rfq.py  test_server.py
visualizer/: index.html  package-lock.json  package.json  vite.config.ts
visualizer/src/: App.test.tsx  App.tsx  index.css
